2012-11-10  Karl Berry  <karl@gnu.org>

	* */Makefile.am: laboriously+manually+redundantly expand $< in
	non-suffix rule.

	* install-info/tests/defs.in: set CDPATH before unsetting,
	to placate BSD sh.  From Stefano.
	* install-info/tests/ii-0053-test: avoid -e.

	* configure.ac (AM_INIT_AUTOMAKE): use parallel-tests,
	as recommended by Stefano Lattarini.  Require automake 1.12.
	* build-aux/test-driver: new file to support it.
	* .cvsignore: ignore *.trs and *.log in test dirs.

2012-11-09  Karl Berry  <karl@gnu.org>

	* configure.ac: remove MKDIR_P fallback.
	* texi2html/Makefile.am,
	* tp/Makefile.am: consistently use $(mkdir_p) rather than $(MKDIR_P).
	
	* Run gnulib-tool --import, srclist.txi.

2012-11-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (@indentedblock): new node for new command.
	(Quotations and Examples, small): mention @smallindentedblock.
	(Command List): include these two new commands.
	* doc/refcard/txirefcard.tex: likewise.
	* NEWS: likewise.
	* doc/texinfo.tex (\indentedblockstart, \Eindentedblock,
	\Esmallindentedblock): new macros to implement them.
	(\quotationstart): can call \indentedblockstart now.

2012-10-27  Karl Berry  <karl@gnu.org>

	* util/gendocs.sh: remove PostScript generation, redundant with 
	(and worse than) pdf, these days.
	* util/gendocs_template,
	* util/gendocs_template_min,

2012-10-27  Akim Demaille  <akim@lrde.epita.fr>
        and Karl Berry  <karl@gnu.org>

	* util/gendocs.sh (copy_images): new function, Perl code to
	extract images from output HTML and copy them to the output dir.
	(mail of 26 Oct 2012 09:39:53).

2012-09-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Customization Variables): CHECK_HTMLXREF
	not set by default; other tweaks.

2012-09-21  Karl Berry  <karl@gnu.org>

	* tp/tests/parser_tests.sh,
	* tp/tests/run_parser_all.sh: export var=val not portable.

2012-09-21  Karl Berry  <karl@gnu.org>

	* doc/refcard/Makefile (ccheck, vcheck): pass txi_check_args